--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,48 +1,204 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Almost Done</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
+<meta charset="UTF-8">
+<title>Please Wait</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
 
-<h1>Almost There</h1>
-<p>Redirecting in <span id="countdown">5</span> seconds</p>
+<style>
+  body {
+    margin: 0;
+    padding: 40px 15px;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background: #121212;
+    color: #fff;
+  }
 
-<a id="playBtn" style="display:none;">Watch Video</a>
+  /* TOP COUNTDOWN TEXT */
+  .top-text {
+    font-size: 18px;
+    font-weight: bold;
+    color: #0ea026;
+    animation: fadeIn 0.6s ease-in-out;
+  }
 
-<script>
-  const token = new URLSearchParams(window.location.search).get("token");
-  const countdown = document.getElementById("countdown");
-  const btn = document.getElementById("playBtn");
+  .note {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #aaa;
+  }
 
-  let time = 5;
+  /* COUNTER ANIMATION */
+  #counter {
+    animation: pulse 1s infinite;
+  }
 
-  fetch("/api/adlink", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      target: `${window.location.origin}/play.html?token=${token}`
-    })
-  })
-  .then(res => res.json())
-  .then(data => {
-    if (!data.adLink) {
-      countdown.textContent = "Ad failed";
+  /* MIDDLE AD CONTAINER */
+  #middle-ad {
+    min-height: 300px;
+    margin: 40px 0;
+    position: relative;
+  }
+
+  /* CONTINUE BUTTON */
+  #continueBtn {
+    display: none;
+    margin: 30px auto;
+    padding: 12px 26px;
+    font-size: 16px;
+    background: #28a745;
+    color: #fff;
+    border-radius: 6px;
+    text-decoration: none;
+    position: relative;
+    z-index: 10;
+    cursor: pointer;
+  }
+
+  /* CARDS */
+  .cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 16px;
+    margin: 40px auto 20px;
+    max-width: 800px;
+  }
+
+  .social-card {
+    background: #1e1e1e;
+    border: 1px solid #333;
+    border-radius: 12px;
+    padding: 20px;
+    width: 100%;
+    max-width: 300px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    transition: border-color 0.3s, transform 0.2s;
+  }
+
+  .social-card:hover {
+    border-color: #1c6cff;
+    transform: translateY(-5px);
+  }
+
+  .social-card .title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #1c6cff;
+    margin-bottom: 15px;
+  }
+
+  .social-card .links {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .social-card a {
+    display: block;
+    padding: 10px;
+    background: #282828;
+    border-radius: 8px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+    transition: background 0.3s;
+  }
+
+  .social-card a:hover {
+    background: #333;
+  }
+
+  /* ANIMATIONS */
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(-5px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  @keyframes pulse {
+    0% { opacity: 1; }
+    50% { opacity: 0.4; }
+    100% { opacity: 1; }
+  }
+</style>
+
+<script type="module">
+  import { startCountdown } from "/js/timer.js";
+
+  window.onload = () => {
+    const params = new URLSearchParams(window.location.search);
+    const token = params.get("token");
+
+    if (!token) {
+      alert("Invalid link");
       return;
     }
 
-    const timer = setInterval(() => {
-      time--;
-      countdown.textContent = time;
-      if (time <= 0) {
-        clearInterval(timer);
-        btn.style.display = "inline-block";
-        btn.href = data.adLink; // 🔥 ShrinkMe ad
-      }
-    }, 1000);
-  });
+    startCountdown(
+      7,
+      "#counter",
+      "#continueBtn",
+      `/play.html?token=${encodeURIComponent(token)}`
+    );
+  };
+</script>
+</head>
+
+<body>
+<script type="text/javascript">
+    aclib.runInterstitial({
+        zoneId: '10823546',
+    });
+</script>
+
+  <!-- TOP COUNTDOWN -->
+  <div class="top-text">
+    Please wait <span id="counter">7</span> seconds
+  </div>
+  <div class="note">
+    Scroll down to continue
+  </div>
+
+  <!-- 3 RESPONSIVE CARDS -->
+  <div class="cards-container">
+    <!-- Card 1: 3 Telegram Channels -->
+    <div class="social-card">
+      <div class="title">Telegram Channels</div>
+      <div class="links">
+        <a href="https://t.me/+aMi7lySDS-o3ZDJl" target="_blank">Channel 1</a>
+        <a href="https://t.me/+3Cv9UN61g-NkMWU9" target="_blank">Channel 2</a>
+        <a href="https://t.me/+0g6nObThQSsyZGJl" target="_blank">Channel 3</a>
+      </div>
+    </div>
+
+    <!-- Card 2: 2 Instagram Accounts -->
+    <div class="social-card">
+      <div class="title">Instagram Accounts</div>
+      <div class="links">
+        <a href="https://www.instagram.com/link_hai.1?igsh=MTNicHIzcTB2Z3Y3ZQ==" target="_blank">Viral Videos(insta)</a>
+        <a href="https://www.instagram.com/linklelo.1r?igsh=MWc1aW83b2FnaWZicw==" target="_blank">Leak Videos(insta)</a>
+      </div>
+    </div>
+
+    <!-- Card 3: More Telegram Channels -->
+    <div class="social-card">
+      <div class="title">More Telegram</div>
+      <div class="links">
+        <a href="https://t.me/+PUS1uIkfzftkOGY1" target="_blank">Backup Channel 1</a>
+        <a href="https://t.me/+FxoNIHprEKlmYzFl" target="_blank">Backup Channel 2</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- CONTINUE BUTTON -->
+  <a id="continueBtn">Continue</a>
+
+<script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'djzncdogz3',
+    });
 </script>
 
 </body>
